--- a/NBWebAPI/appsettings.json
+++ b/NBWebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Tokenoptions": {
+    "Audience": "www.burak.com",
+    "Issuer": "www.burak.com",
+    "AccesstokenExpiration": 10,
+    "SecurityKey": "mysecretkeymyveryprivatesecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
